<resources>
    <string name="app_name">UniTrack</string>
    <string name="title_home">Domov</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Nastavenia</string>
    <string name="title_activity_login">Prihlásenie</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Heslo</string>
    <string name="action_sign_in">Prihlásiť sa</string>
    <string name="action_sign_in_short">Prihlásiť</string>
    <string name="welcome">"Vitajte!"</string>
    <string name="invalid_password">Heslo musí byť dlhšie ako 5 znakov</string>
    <string name="invalid_username">Nesprávny e-mail.</string>
    <string name="login_failed">Nepodarilo sa prihlásiť.</string>
    <string name="offline_mode">Lokálny režim</string>
    <string name="offline_mode_activated">Lokálny režim aktivovaný. Pre online režim resetujte aplikáciu.</string>
    <string name="or_divider">alebo</string>
    <string name="reset_app">Resetovať aplikáciu</string>
    <string name="reset_app_confirm">Naozaj chcete resetovať aplikáciu? Tým sa vymažú všetky lokálne dáta a prepnete sa na online režim.</string>
    <string name="export_database">Export</string>
    <string name="import_database">Import</string>
    <string name="export_success">Databáza bola úspešne exportovaná.</string>
    <string name="export_failed">Chyba pri exporte databázy.</string>
    <string name="import_success">Databáza bola úspešne importovaná.</string>
    <string name="import_failed">Chyba pri importe databázy.</string>
    <string name="offline_admin">Lokálny správca</string>
    <string name="add_student">Pridať študenta</string>
    <string name="student_name_hint">Meno študenta</string>
    <string name="student_email_hint">E-mail študenta</string>
    <string name="title_students">Študenti</string>
    <string name="title_accounts">Účty</string>
    <string name="title_subjects">Predmety</string>
    <string name="search_hint">Hľadať…</string>
    <string name="add_student_title">Pridať študenta</string>
    <string name="student_name">Meno študenta</string>
    <string name="no_students">Žiadni študenti</string>
    <string name="no_subjects">Žiadne predmety</string>
    <string name="add_subject_title">Pridať predmet</string>
    <string name="subject_name">Názov predmetu</string>
    <string name="delete_student_confirm">Naozaj chcete odstrániť tohto študenta?</string>
    <string name="delete_subject_confirm">Naozaj chcete odstrániť tento predmet?</string>
    <string name="enrollment">Zápis predmetov</string>
    <string name="new_semester_title">Nový akademický rok</string>
    <string name="edit_semester_title">Úprava akademického roka</string>
    <string name="tab_settings">Nastavenia</string>
    <string name="tab_students">Študenti</string>
    <string name="tab_subjects">Predmety</string>
    <string name="new_semester_hint">Začiatočný rok (napr. 2026)</string>
    <string name="new_semester_preview">Akademický rok: %s</string>
    <string name="new_semester_create">Vytvoriť</string>
    <string name="new_semester_copy_subjects">Kopírovať predmety z:</string>
    <string name="new_semester_no_copy">Nekopírovať</string>
    <string name="new_semester_added">Akademický rok %s bol pridaný.</string>
    <string name="new_semester_exists">Tento akademický rok už existuje.</string>
    <string name="new_semester_invalid_year">Zadajte platný rok.</string>
    <string name="new_semester_option">Nový</string>
    <string name="subject_semester">Semester</string>
    <string name="semester_both">Oba (Zimný aj Letný)</string>
    <string name="semester_winter">Zimný</string>
    <string name="semester_summer">Letný</string>
    <string name="title_timetable">Rozvrh</string>
    <string name="title_consulting">Konzultácie</string>
    <string name="timetable_day">Deň</string>
    <string name="timetable_start_time">Začiatok (napr. 13:50)</string>
    <string name="timetable_end_time">Koniec (napr. 14:50)</string>
    <string name="timetable_week_parity">Týždeň</string>
    <string name="timetable_week_every">Každý týždeň</string>
    <string name="timetable_week_odd">Nepárny týždeň</string>
    <string name="timetable_week_even">Párny týždeň</string>
    <string name="timetable_classroom">Miestnosť (napr. A402)</string>
    <string name="timetable_note">Poznámka</string>
    <string name="timetable_add_entry">Pridať čas</string>
    <string name="timetable_edit_entry">Upraviť čas</string>
    <string name="timetable_delete_entry_confirm">Naozaj chcete odstrániť tento čas z rozvrhu?</string>
    <string name="timetable_time_conflict">Časový konflikt: %1$s je v rovnakom čase (%2$s %3$s-%4$s). Zvoľte iný čas.</string>
    <string name="timetable_add_day_off">Pridať neprítomnosť</string>
    <string name="timetable_actions_title">Akcie rozvrhu</string>
    <string name="timetable_day_off_date_from">Od (napr. 23.02.2026)</string>
    <string name="timetable_day_off_date_to">Do (voliteľné, napr. 04.03.2026)</string>
    <string name="timetable_day_off_time_from">Od času (voliteľné, napr. 12:00)</string>
    <string name="timetable_day_off_time_to">Do času (voliteľné, napr. 14:00)</string>
    <string name="timetable_day_off_note">Dôvod (voliteľné)</string>
    <string name="timetable_no_classes">Žiadne hodiny</string>
    <string name="timetable_free_day">Žiadne rozvrhové aktivity na dnešný deň.</string>
    <string name="timetable_day_off_label">Neprítomnosť</string>
    <string name="timetable_my_days_off">Moja neprítomnosť</string>
    <string name="timetable_no_days_off">Žiadna naplánovaná neprítomnosť</string>
    <string name="timetable_delete_day_off_confirm">Naozaj chcete odstrániť túto neprítomnosť?</string>
    <string name="timetable_class_cancelled">Hodina zrušená</string>
    <string name="timetable_week_label">Týždeň %d</string>
    <string name="timetable_filter_all">Všetky</string>
    <string name="filter_all_people">Všetci</string>
    <string name="timetable_filter_odd">Nepárny</string>
    <string name="timetable_filter_even">Párny</string>
    <string name="timetable_filter_today">Dnes</string>
    <string name="day_monday">Pondelok</string>
    <string name="day_tuesday">Utorok</string>
    <string name="day_wednesday">Streda</string>
    <string name="day_thursday">Štvrtok</string>
    <string name="day_friday">Piatok</string>
    <string name="day_saturday">Sobota</string>
    <string name="day_sunday">Nedeľa</string>
    <string name="notification_channel_timetable">Rozvrh hodín</string>
    <string name="notification_channel_cancelled">Zrušené hodiny</string>
    <string name="notification_next_class">Rozvrh dnes</string>
    <string name="notification_next_class_detail">%1$s o %2$s</string>
    <string name="notification_next_class_room">v %s</string>
    <string name="notification_no_more_classes">Žiadne ďalšie hodiny dnes</string>
    <string name="notification_break">Prestávka</string>
    <string name="notification_free_time">Voľno</string>
    <string name="notification_now">Teraz: %s</string>
    <string name="notification_next">Ďalej: %1$s o %2$s</string>
    <string name="notification_current_class">Práve prebieha: %s</string>
    <string name="notification_last_class_today">Posledná hodina dnes</string>
    <string name="notification_class_cancelled_title">Hodina zrušená</string>
    <string name="notification_class_cancelled_desc">Upozornenia na zrušené hodiny</string>
    <string name="notification_class_cancelled_single">%1$s zrušená na %2$s</string>
    <string name="notification_class_cancelled_multiple">Zrušené hodiny na %2$s: %1$s</string>
    <string name="notification_channel_grades">Známky</string>
    <string name="notification_grade_change_title">Zmena známky</string>
    <string name="notification_grade_change_desc">Upozornenia na zmeny známok</string>
    <string name="notification_grade_added">Nová známka %1$s z %2$s</string>
    <string name="notification_grade_edited">Upravená známka %1$s z %2$s</string>
    <string name="notification_grade_removed">Odstránená známka z %s</string>
    <string name="notification_grade_changes_count">zmien v známkach</string>
    <string name="notification_channel_absence">Absencia</string>
    <string name="notification_absence_title">Absencia</string>
    <string name="notification_absence_desc">Upozornenia na neprítomnosť na hodine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Vytvoriť účet</string>
    <string name="forgot_password">Zabudnuté heslo?</string>
    <string name="reset_password_title">Obnovenie hesla</string>
    <string name="reset_password_hint">Zadajte váš e-mail</string>
    <string name="reset_password_sent">E-mail na obnovu hesla bol odoslaný.</string>
    <string name="reset_password_error">Chyba pri odosielaní e-mailu: %s</string>
    <string name="register_title">Registrácia</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_name_hint">Meno a priezvisko</string>
    <string name="register_button">Zaregistrovať sa</string>
    <string name="register_success">Registrácia odoslaná. Skontrolujte e-mail pre nastavenie hesla. Váš účet musí byť schválený administrátorom.</string>
    <string name="register_invalid_domain">Registrácia je povolená len pre e-maily s doménou: %s</string>
    <string name="register_error">Chyba pri registrácii: %s</string>
    <string name="pending_approval">Čaká na schválenie</string>
    <string name="pending_approve_title">Schváliť používateľa</string>
    <string name="pending_approve_message">Vyberte rolu pre %s:</string>
    <string name="pending_approve_confirm_title">Potvrdiť schválenie</string>
    <string name="pending_approve_confirm_message">Naozaj chcete, aby používateľ %s získal rolu %s?</string>
    <string name="pending_role_student">Študent</string>
    <string name="pending_role_teacher">Učiteľ</string>
    <string name="pending_approved_student">Používateľ schválený ako študent.</string>
    <string name="pending_approved_teacher">Používateľ schválený ako učiteľ.</string>
    <string name="pending_rejected">Používateľ bol odmietnutý.</string>
    <string name="pending_reject_confirm">Naozaj chcete odmietnuť tohto používateľa?</string>
    <string name="pending_message">Váš účet čaká na schválenie administrátorom. Po schválení budete mať prístup k všetkým funkciám aplikácie.</string>
    <string name="logout">Odhlásiť sa</string>
    <string name="pending_rejected_user">Váš účet bol zamietnutý.</string>
    <string name="pending_rejected_title">Účet zamietnutý</string>
    <string name="pending_rejected_message">Váš účet bol zamietnutý administrátorom. Ak si myslíte, že ide o chybu, môžete požiadať o opätovné posúdenie.</string>
    <string name="pending_reapply">Požiadať znova</string>
    <string name="pending_reapply_success">Žiadosť bola znovu odoslaná.</string>
    <string name="timetable_specific_date">Dátum (napr. 15.03.2026)</string>
    <string name="timetable_specific_dates">Špecifické dni</string>
    <string name="timetable_add_specific_date">+ Pridať dátum</string>
    <string name="timetable_add_consulting_hours">Pridať konzultačné hodiny</string>
    <string name="timetable_consulting_hours">Konzultačné hodiny</string>
    <string name="timetable_one_time_event">Jednorazová udalosť</string>
    <string name="app_version">Verzia aplikácie: %s</string>
    <string name="update_available">K dispozícii je aktualizácia</string>
    <string name="check_for_updates">Skontrolovať aktualizácie</string>
    <string name="update_not_available">Žiadna nová aktualizácia</string>
    <string name="update_checking">Kontrolujem aktualizácie…</string>
    <string name="notification_channel_updates">Aktualizácie</string>
    <string name="notification_channel_updates_desc">Upozornenia na dostupné aktualizácie</string>
</resources>