<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marek.guran.unitrack.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        
        <action
            android:id="@+id/action_home_to_subject_detail"
            app:destination="@id/subjectDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.marek.guran.unitrack.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.marek.guran.unitrack.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <fragment
        android:id="@+id/navigation_students"
        android:name="com.marek.guran.unitrack.ui.students.StudentsManageFragment"
        android:label="@string/title_students"
        tools:layout="@layout/fragment_students_manage"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <fragment
        android:id="@+id/navigation_subjects"
        android:name="com.marek.guran.unitrack.ui.subjects.SubjectsManageFragment"
        android:label="@string/title_subjects"
        tools:layout="@layout/fragment_subjects_manage"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <fragment
        android:id="@+id/subjectDetailFragment"
        android:name="com.marek.guran.unitrack.SubjectDetailFragment"
        android:label="Subject Detail"
        tools:layout="@layout/fragment_subject_detail">
        <argument
            android:name="subjectName"
            app:argType="string" />
        <argument
            android:name="subjectKey"
            app:argType="string" />
    </fragment>
</navigation>